--- a/tutormundi/index.html
+++ b/tutormundi/index.html
@@ -13,14 +13,14 @@
     <title>TutorMundi</title>
 </head>
 <body>
-    <img class="book" src="/assets/img/livro.png">
+    <img class="book" src="https://i.ibb.co/M6nZgy0/livro.png">
     <h1>Como foi a ajuda do tutor?</h1>
         <div class="rating">
-        <i class="rating_star inactive"><img src="/assets/img/estrela_vazia.svg"></i>
-        <i class="rating_star inactive"><img src="/assets/img/estrela_vazia.svg"></i>
-        <i class="rating_star inactive"><img src="/assets/img/estrela_vazia.svg"></i>
-        <i class="rating_star inactive"><img src="/assets/img/estrela_vazia.svg"></i>
-        <i class="rating_star inactive"><img src="/assets/img/estrela_vazia.svg"></i>
+        <i class="rating_star inactive"><img src="https://svgur.com/i/ct5.svg"></i>
+        <i class="rating_star inactive"><img src="https://svgur.com/i/ct5.svg"></i>
+        <i class="rating_star inactive"><img src="https://svgur.com/i/ct5.svg"></i>
+        <i class="rating_star inactive"><img src="https://svgur.com/i/ct5.svg"></i>
+        <i class="rating_star inactive"><img src="https://svgur.com/i/ct5.svg"></i>
         </div>
     <button class="btn">PULAR</button>
     <button class="btn2">CONFIRMAR</button>
